new_parser.output
Terminals unused in grammar

    BIT_NOT
    BIT_AND
    BIT_OR
    BIT_XOR
    STRING
    CHAR_LIT


Grammar

    0 $accept: program_prime $end

    1 program_prime: program

    2 program: ACCIO stmt_list LUMOS

    3 block: BEGIN_BLK stmt_list END_BLK

    4 stmt_list: stmt_list stmt
    5          | ε

    6 stmt: var_decl DOLLAR
    7     | assignment DOLLAR
    8     | if_stmt
    9     | while_stmt
   10     | for_stmt
   11     | block
   12     | func_decl DOLLAR
   13     | func_call DOLLAR
   14     | break_stmt DOLLAR
   15     | continue_stmt DOLLAR
   16     | return_stmt DOLLAR

   17 var_decl: VARIABLE ID COLON type

   18 type: TYPE_INT
   19     | TYPE_LONG
   20     | TYPE_SHORT
   21     | TYPE_FLOAT
   22     | TYPE_DOUBLE
   23     | TYPE_CHAR
   24     | TYPE_VOID

   25 assignment: ID ASSIGN expr

   26 if_prefix: IF LPAREN condition RPAREN

   27 if_stmt: if_prefix block

   28 @1: ε

   29 if_stmt: if_prefix block ELSE @1 block

   30 @2: ε

   31 $@3: ε

   32 while_stmt: WHILE @2 LPAREN condition RPAREN $@3 block

   33 $@4: ε

   34 $@5: ε

   35 $@6: ε

   36 for_stmt: FOR LPAREN assignment DOLLAR $@4 condition DOLLAR $@5 assignment RPAREN $@6 block

   37 func_call: CALL ID LPAREN arg_list RPAREN

   38 arg_list: args
   39         | ε

   40 args: args COMMA expr
   41     | expr

   42 func_decl: FUNC type ID LPAREN param_list RPAREN block

   43 param_list: param_list COMMA param
   44           | param
   45           | ε

   46 param: ID COLON type

   47 return_stmt: RETURN expr

   48 break_stmt: BREAK

   49 continue_stmt: CONTINUE

   50 condition: expr rel_op expr
   51          | condition AND condition
   52          | condition OR condition
   53          | NOT condition
   54          | LPAREN condition RPAREN

   55 rel_op: LT
   56       | GT
   57       | EQ
   58       | LE
   59       | GE
   60       | NE

   61 expr: expr PLUS term
   62     | expr MINUS term
   63     | term

   64 term: term MULT factor
   65     | term DIV factor
   66     | term MOD factor
   67     | factor

   68 factor: LPAREN expr RPAREN
   69       | MINUS factor
   70       | ID
   71       | NUMBER


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ACCIO (258) 2
    LUMOS (259) 2
    BEGIN_BLK (260) 3
    END_BLK (261) 3
    VARIABLE (262) 17
    TYPE_INT (263) 18
    TYPE_LONG (264) 19
    TYPE_SHORT (265) 20
    TYPE_FLOAT (266) 21
    TYPE_DOUBLE (267) 22
    TYPE_CHAR (268) 23
    TYPE_VOID (269) 24
    IF (270) 26
    ELSE (271) 29
    WHILE (272) 32
    FOR (273) 36
    FUNC (274) 42
    CALL (275) 37
    RETURN (276) 47
    BREAK (277) 48
    CONTINUE (278) 49
    AND (279) 51
    OR (280) 52
    NOT (281) 53
    BIT_NOT (282)
    EQ (283) 57
    NE (284) 60
    LT (285) 55
    GT (286) 56
    LE (287) 58
    GE (288) 59
    PLUS (289) 61
    MINUS (290) 62 69
    MULT (291) 64
    DIV (292) 65
    MOD (293) 66
    BIT_AND (294)
    BIT_OR (295)
    BIT_XOR (296)
    DOLLAR (297) 6 7 12 13 14 15 16 36
    COLON (298) 17 46
    ASSIGN (299) 25
    COMMA (300) 40 43
    LPAREN (301) 26 32 36 37 42 54 68
    RPAREN (302) 26 32 36 37 42 54 68
    ID <str> (303) 17 25 37 42 46 70
    NUMBER <str> (304) 71
    STRING <str> (305)
    CHAR_LIT <str> (306)
    LOWER_THAN_ELSE (307)


Nonterminals, with rules where they appear

    $accept (53)
        on left: 0
    program_prime (54)
        on left: 1
        on right: 0
    program (55)
        on left: 2
        on right: 1
    block (56)
        on left: 3
        on right: 11 27 29 32 36 42
    stmt_list (57)
        on left: 4 5
        on right: 2 3 4
    stmt (58)
        on left: 6 7 8 9 10 11 12 13 14 15 16
        on right: 4
    var_decl (59)
        on left: 17
        on right: 6
    type (60)
        on left: 18 19 20 21 22 23 24
        on right: 17 42 46
    assignment (61)
        on left: 25
        on right: 7 36
    if_prefix <str> (62)
        on left: 26
        on right: 27 29
    if_stmt (63)
        on left: 27 29
        on right: 8
    @1 (64)
        on left: 28
        on right: 29
    while_stmt (65)
        on left: 32
        on right: 9
    @2 (66)
        on left: 30
        on right: 32
    $@3 (67)
        on left: 31
        on right: 32
    for_stmt (68)
        on left: 36
        on right: 10
    $@4 (69)
        on left: 33
        on right: 36
    $@5 (70)
        on left: 34
        on right: 36
    $@6 (71)
        on left: 35
        on right: 36
    func_call (72)
        on left: 37
        on right: 13
    arg_list (73)
        on left: 38 39
        on right: 37
    args (74)
        on left: 40 41
        on right: 38 40
    func_decl (75)
        on left: 42
        on right: 12
    param_list (76)
        on left: 43 44 45
        on right: 42 43
    param (77)
        on left: 46
        on right: 43 44
    return_stmt (78)
        on left: 47
        on right: 16
    break_stmt (79)
        on left: 48
        on right: 14
    continue_stmt (80)
        on left: 49
        on right: 15
    condition <str> (81)
        on left: 50 51 52 53 54
        on right: 26 32 36 51 52 53 54
    rel_op <str> (82)
        on left: 55 56 57 58 59 60
        on right: 50
    expr <str> (83)
        on left: 61 62 63
        on right: 25 40 41 47 50 61 62 68
    term <str> (84)
        on left: 64 65 66 67
        on right: 61 62 63 64 65 66
    factor <str> (85)
        on left: 68 69 70 71
        on right: 64 65 66 67 69


State 0

    0 $accept: • program_prime $end

    ACCIO  shift, and go to state 1

    program_prime  go to state 2
    program        go to state 3


State 1

    2 program: ACCIO • stmt_list LUMOS

    $default  reduce using rule 5 (stmt_list)

    stmt_list  go to state 4


State 2

    0 $accept: program_prime • $end

    $end  shift, and go to state 5


State 3

    1 program_prime: program •

    $default  reduce using rule 1 (program_prime)


State 4

    2 program: ACCIO stmt_list • LUMOS
    4 stmt_list: stmt_list • stmt

    LUMOS      shift, and go to state 6
    BEGIN_BLK  shift, and go to state 7
    VARIABLE   shift, and go to state 8
    IF         shift, and go to state 9
    WHILE      shift, and go to state 10
    FOR        shift, and go to state 11
    FUNC       shift, and go to state 12
    CALL       shift, and go to state 13
    RETURN     shift, and go to state 14
    BREAK      shift, and go to state 15
    CONTINUE   shift, and go to state 16
    ID         shift, and go to state 17

    block          go to state 18
    stmt           go to state 19
    var_decl       go to state 20
    assignment     go to state 21
    if_prefix      go to state 22
    if_stmt        go to state 23
    while_stmt     go to state 24
    for_stmt       go to state 25
    func_call      go to state 26
    func_decl      go to state 27
    return_stmt    go to state 28
    break_stmt     go to state 29
    continue_stmt  go to state 30


State 5

    0 $accept: program_prime $end •

    $default  accept


State 6

    2 program: ACCIO stmt_list LUMOS •

    $default  reduce using rule 2 (program)


State 7

    3 block: BEGIN_BLK • stmt_list END_BLK

    $default  reduce using rule 5 (stmt_list)

    stmt_list  go to state 31


State 8

   17 var_decl: VARIABLE • ID COLON type

    ID  shift, and go to state 32


State 9

   26 if_prefix: IF • LPAREN condition RPAREN

    LPAREN  shift, and go to state 33


State 10

   32 while_stmt: WHILE • @2 LPAREN condition RPAREN $@3 block

    $default  reduce using rule 30 (@2)

    @2  go to state 34


State 11

   36 for_stmt: FOR • LPAREN assignment DOLLAR $@4 condition DOLLAR $@5 assignment RPAREN $@6 block

    LPAREN  shift, and go to state 35


State 12

   42 func_decl: FUNC • type ID LPAREN param_list RPAREN block

    TYPE_INT     shift, and go to state 36
    TYPE_LONG    shift, and go to state 37
    TYPE_SHORT   shift, and go to state 38
    TYPE_FLOAT   shift, and go to state 39
    TYPE_DOUBLE  shift, and go to state 40
    TYPE_CHAR    shift, and go to state 41
    TYPE_VOID    shift, and go to state 42

    type  go to state 43


State 13

   37 func_call: CALL • ID LPAREN arg_list RPAREN

    ID  shift, and go to state 44


State 14

   47 return_stmt: RETURN • expr

    MINUS   shift, and go to state 45
    LPAREN  shift, and go to state 46
    ID      shift, and go to state 47
    NUMBER  shift, and go to state 48

    expr    go to state 49
    term    go to state 50
    factor  go to state 51


State 15

   48 break_stmt: BREAK •

    $default  reduce using rule 48 (break_stmt)


State 16

   49 continue_stmt: CONTINUE •

    $default  reduce using rule 49 (continue_stmt)


State 17

   25 assignment: ID • ASSIGN expr

    ASSIGN  shift, and go to state 52


State 18

   11 stmt: block •

    $default  reduce using rule 11 (stmt)


State 19

    4 stmt_list: stmt_list stmt •

    $default  reduce using rule 4 (stmt_list)


State 20

    6 stmt: var_decl • DOLLAR

    DOLLAR  shift, and go to state 53


State 21

    7 stmt: assignment • DOLLAR

    DOLLAR  shift, and go to state 54


State 22

   27 if_stmt: if_prefix • block
   29        | if_prefix • block ELSE @1 block

    BEGIN_BLK  shift, and go to state 7

    block  go to state 55


State 23

    8 stmt: if_stmt •

    $default  reduce using rule 8 (stmt)


State 24

    9 stmt: while_stmt •

    $default  reduce using rule 9 (stmt)


State 25

   10 stmt: for_stmt •

    $default  reduce using rule 10 (stmt)


State 26

   13 stmt: func_call • DOLLAR

    DOLLAR  shift, and go to state 56


State 27

   12 stmt: func_decl • DOLLAR

    DOLLAR  shift, and go to state 57


State 28

   16 stmt: return_stmt • DOLLAR

    DOLLAR  shift, and go to state 58


State 29

   14 stmt: break_stmt • DOLLAR

    DOLLAR  shift, and go to state 59


State 30

   15 stmt: continue_stmt • DOLLAR

    DOLLAR  shift, and go to state 60


State 31

    3 block: BEGIN_BLK stmt_list • END_BLK
    4 stmt_list: stmt_list • stmt

    BEGIN_BLK  shift, and go to state 7
    END_BLK    shift, and go to state 61
    VARIABLE   shift, and go to state 8
    IF         shift, and go to state 9
    WHILE      shift, and go to state 10
    FOR        shift, and go to state 11
    FUNC       shift, and go to state 12
    CALL       shift, and go to state 13
    RETURN     shift, and go to state 14
    BREAK      shift, and go to state 15
    CONTINUE   shift, and go to state 16
    ID         shift, and go to state 17

    block          go to state 18
    stmt           go to state 19
    var_decl       go to state 20
    assignment     go to state 21
    if_prefix      go to state 22
    if_stmt        go to state 23
    while_stmt     go to state 24
    for_stmt       go to state 25
    func_call      go to state 26
    func_decl      go to state 27
    return_stmt    go to state 28
    break_stmt     go to state 29
    continue_stmt  go to state 30


State 32

   17 var_decl: VARIABLE ID • COLON type

    COLON  shift, and go to state 62


State 33

   26 if_prefix: IF LPAREN • condition RPAREN

    NOT     shift, and go to state 63
    MINUS   shift, and go to state 45
    LPAREN  shift, and go to state 64
    ID      shift, and go to state 47
    NUMBER  shift, and go to state 48

    condition  go to state 65
    expr       go to state 66
    term       go to state 50
    factor     go to state 51


State 34

   32 while_stmt: WHILE @2 • LPAREN condition RPAREN $@3 block

    LPAREN  shift, and go to state 67


State 35

   36 for_stmt: FOR LPAREN • assignment DOLLAR $@4 condition DOLLAR $@5 assignment RPAREN $@6 block

    ID  shift, and go to state 17

    assignment  go to state 68


State 36

   18 type: TYPE_INT •

    $default  reduce using rule 18 (type)


State 37

   19 type: TYPE_LONG •

    $default  reduce using rule 19 (type)


State 38

   20 type: TYPE_SHORT •

    $default  reduce using rule 20 (type)


State 39

   21 type: TYPE_FLOAT •

    $default  reduce using rule 21 (type)


State 40

   22 type: TYPE_DOUBLE •

    $default  reduce using rule 22 (type)


State 41

   23 type: TYPE_CHAR •

    $default  reduce using rule 23 (type)


State 42

   24 type: TYPE_VOID •

    $default  reduce using rule 24 (type)


State 43

   42 func_decl: FUNC type • ID LPAREN param_list RPAREN block

    ID  shift, and go to state 69


State 44

   37 func_call: CALL ID • LPAREN arg_list RPAREN

    LPAREN  shift, and go to state 70


State 45

   69 factor: MINUS • factor

    MINUS   shift, and go to state 45
    LPAREN  shift, and go to state 46
    ID      shift, and go to state 47
    NUMBER  shift, and go to state 48

    factor  go to state 71


State 46

   68 factor: LPAREN • expr RPAREN

    MINUS   shift, and go to state 45
    LPAREN  shift, and go to state 46
    ID      shift, and go to state 47
    NUMBER  shift, and go to state 48

    expr    go to state 72
    term    go to state 50
    factor  go to state 51


State 47

   70 factor: ID •

    $default  reduce using rule 70 (factor)


State 48

   71 factor: NUMBER •

    $default  reduce using rule 71 (factor)


State 49

   47 return_stmt: RETURN expr •
   61 expr: expr • PLUS term
   62     | expr • MINUS term

    PLUS   shift, and go to state 73
    MINUS  shift, and go to state 74

    $default  reduce using rule 47 (return_stmt)


State 50

   63 expr: term •
   64 term: term • MULT factor
   65     | term • DIV factor
   66     | term • MOD factor

    MULT  shift, and go to state 75
    DIV   shift, and go to state 76
    MOD   shift, and go to state 77

    $default  reduce using rule 63 (expr)


State 51

   67 term: factor •

    $default  reduce using rule 67 (term)


State 52

   25 assignment: ID ASSIGN • expr

    MINUS   shift, and go to state 45
    LPAREN  shift, and go to state 46
    ID      shift, and go to state 47
    NUMBER  shift, and go to state 48

    expr    go to state 78
    term    go to state 50
    factor  go to state 51


State 53

    6 stmt: var_decl DOLLAR •

    $default  reduce using rule 6 (stmt)


State 54

    7 stmt: assignment DOLLAR •

    $default  reduce using rule 7 (stmt)


State 55

   27 if_stmt: if_prefix block •
   29        | if_prefix block • ELSE @1 block

    ELSE  shift, and go to state 79

    $default  reduce using rule 27 (if_stmt)


State 56

   13 stmt: func_call DOLLAR •

    $default  reduce using rule 13 (stmt)


State 57

   12 stmt: func_decl DOLLAR •

    $default  reduce using rule 12 (stmt)


State 58

   16 stmt: return_stmt DOLLAR •

    $default  reduce using rule 16 (stmt)


State 59

   14 stmt: break_stmt DOLLAR •

    $default  reduce using rule 14 (stmt)


State 60

   15 stmt: continue_stmt DOLLAR •

    $default  reduce using rule 15 (stmt)


State 61

    3 block: BEGIN_BLK stmt_list END_BLK •

    $default  reduce using rule 3 (block)


State 62

   17 var_decl: VARIABLE ID COLON • type

    TYPE_INT     shift, and go to state 36
    TYPE_LONG    shift, and go to state 37
    TYPE_SHORT   shift, and go to state 38
    TYPE_FLOAT   shift, and go to state 39
    TYPE_DOUBLE  shift, and go to state 40
    TYPE_CHAR    shift, and go to state 41
    TYPE_VOID    shift, and go to state 42

    type  go to state 80


State 63

   53 condition: NOT • condition

    NOT     shift, and go to state 63
    MINUS   shift, and go to state 45
    LPAREN  shift, and go to state 64
    ID      shift, and go to state 47
    NUMBER  shift, and go to state 48

    condition  go to state 81
    expr       go to state 66
    term       go to state 50
    factor     go to state 51


State 64

   54 condition: LPAREN • condition RPAREN
   68 factor: LPAREN • expr RPAREN

    NOT     shift, and go to state 63
    MINUS   shift, and go to state 45
    LPAREN  shift, and go to state 64
    ID      shift, and go to state 47
    NUMBER  shift, and go to state 48

    condition  go to state 82
    expr       go to state 83
    term       go to state 50
    factor     go to state 51


State 65

   26 if_prefix: IF LPAREN condition • RPAREN
   51 condition: condition • AND condition
   52          | condition • OR condition

    AND     shift, and go to state 84
    OR      shift, and go to state 85
    RPAREN  shift, and go to state 86


State 66

   50 condition: expr • rel_op expr
   61 expr: expr • PLUS term
   62     | expr • MINUS term

    EQ     shift, and go to state 87
    NE     shift, and go to state 88
    LT     shift, and go to state 89
    GT     shift, and go to state 90
    LE     shift, and go to state 91
    GE     shift, and go to state 92
    PLUS   shift, and go to state 73
    MINUS  shift, and go to state 74

    rel_op  go to state 93


State 67

   32 while_stmt: WHILE @2 LPAREN • condition RPAREN $@3 block

    NOT     shift, and go to state 63
    MINUS   shift, and go to state 45
    LPAREN  shift, and go to state 64
    ID      shift, and go to state 47
    NUMBER  shift, and go to state 48

    condition  go to state 94
    expr       go to state 66
    term       go to state 50
    factor     go to state 51


State 68

   36 for_stmt: FOR LPAREN assignment • DOLLAR $@4 condition DOLLAR $@5 assignment RPAREN $@6 block

    DOLLAR  shift, and go to state 95


State 69

   42 func_decl: FUNC type ID • LPAREN param_list RPAREN block

    LPAREN  shift, and go to state 96


State 70

   37 func_call: CALL ID LPAREN • arg_list RPAREN

    MINUS   shift, and go to state 45
    LPAREN  shift, and go to state 46
    ID      shift, and go to state 47
    NUMBER  shift, and go to state 48

    $default  reduce using rule 39 (arg_list)

    arg_list  go to state 97
    args      go to state 98
    expr      go to state 99
    term      go to state 50
    factor    go to state 51


State 71

   69 factor: MINUS factor •

    $default  reduce using rule 69 (factor)


State 72

   61 expr: expr • PLUS term
   62     | expr • MINUS term
   68 factor: LPAREN expr • RPAREN

    PLUS    shift, and go to state 73
    MINUS   shift, and go to state 74
    RPAREN  shift, and go to state 100


State 73

   61 expr: expr PLUS • term

    MINUS   shift, and go to state 45
    LPAREN  shift, and go to state 46
    ID      shift, and go to state 47
    NUMBER  shift, and go to state 48

    term    go to state 101
    factor  go to state 51


State 74

   62 expr: expr MINUS • term

    MINUS   shift, and go to state 45
    LPAREN  shift, and go to state 46
    ID      shift, and go to state 47
    NUMBER  shift, and go to state 48

    term    go to state 102
    factor  go to state 51


State 75

   64 term: term MULT • factor

    MINUS   shift, and go to state 45
    LPAREN  shift, and go to state 46
    ID      shift, and go to state 47
    NUMBER  shift, and go to state 48

    factor  go to state 103


State 76

   65 term: term DIV • factor

    MINUS   shift, and go to state 45
    LPAREN  shift, and go to state 46
    ID      shift, and go to state 47
    NUMBER  shift, and go to state 48

    factor  go to state 104


State 77

   66 term: term MOD • factor

    MINUS   shift, and go to state 45
    LPAREN  shift, and go to state 46
    ID      shift, and go to state 47
    NUMBER  shift, and go to state 48

    factor  go to state 105


State 78

   25 assignment: ID ASSIGN expr •
   61 expr: expr • PLUS term
   62     | expr • MINUS term

    PLUS   shift, and go to state 73
    MINUS  shift, and go to state 74

    $default  reduce using rule 25 (assignment)


State 79

   29 if_stmt: if_prefix block ELSE • @1 block

    $default  reduce using rule 28 (@1)

    @1  go to state 106


State 80

   17 var_decl: VARIABLE ID COLON type •

    $default  reduce using rule 17 (var_decl)


State 81

   51 condition: condition • AND condition
   52          | condition • OR condition
   53          | NOT condition •

    $default  reduce using rule 53 (condition)


State 82

   51 condition: condition • AND condition
   52          | condition • OR condition
   54          | LPAREN condition • RPAREN

    AND     shift, and go to state 84
    OR      shift, and go to state 85
    RPAREN  shift, and go to state 107


State 83

   50 condition: expr • rel_op expr
   61 expr: expr • PLUS term
   62     | expr • MINUS term
   68 factor: LPAREN expr • RPAREN

    EQ      shift, and go to state 87
    NE      shift, and go to state 88
    LT      shift, and go to state 89
    GT      shift, and go to state 90
    LE      shift, and go to state 91
    GE      shift, and go to state 92
    PLUS    shift, and go to state 73
    MINUS   shift, and go to state 74
    RPAREN  shift, and go to state 100

    rel_op  go to state 93


State 84

   51 condition: condition AND • condition

    NOT     shift, and go to state 63
    MINUS   shift, and go to state 45
    LPAREN  shift, and go to state 64
    ID      shift, and go to state 47
    NUMBER  shift, and go to state 48

    condition  go to state 108
    expr       go to state 66
    term       go to state 50
    factor     go to state 51


State 85

   52 condition: condition OR • condition

    NOT     shift, and go to state 63
    MINUS   shift, and go to state 45
    LPAREN  shift, and go to state 64
    ID      shift, and go to state 47
    NUMBER  shift, and go to state 48

    condition  go to state 109
    expr       go to state 66
    term       go to state 50
    factor     go to state 51


State 86

   26 if_prefix: IF LPAREN condition RPAREN •

    $default  reduce using rule 26 (if_prefix)


State 87

   57 rel_op: EQ •

    $default  reduce using rule 57 (rel_op)


State 88

   60 rel_op: NE •

    $default  reduce using rule 60 (rel_op)


State 89

   55 rel_op: LT •

    $default  reduce using rule 55 (rel_op)


State 90

   56 rel_op: GT •

    $default  reduce using rule 56 (rel_op)


State 91

   58 rel_op: LE •

    $default  reduce using rule 58 (rel_op)


State 92

   59 rel_op: GE •

    $default  reduce using rule 59 (rel_op)


State 93

   50 condition: expr rel_op • expr

    MINUS   shift, and go to state 45
    LPAREN  shift, and go to state 46
    ID      shift, and go to state 47
    NUMBER  shift, and go to state 48

    expr    go to state 110
    term    go to state 50
    factor  go to state 51


State 94

   32 while_stmt: WHILE @2 LPAREN condition • RPAREN $@3 block
   51 condition: condition • AND condition
   52          | condition • OR condition

    AND     shift, and go to state 84
    OR      shift, and go to state 85
    RPAREN  shift, and go to state 111


State 95

   36 for_stmt: FOR LPAREN assignment DOLLAR • $@4 condition DOLLAR $@5 assignment RPAREN $@6 block

    $default  reduce using rule 33 ($@4)

    $@4  go to state 112


State 96

   42 func_decl: FUNC type ID LPAREN • param_list RPAREN block

    ID  shift, and go to state 113

    $default  reduce using rule 45 (param_list)

    param_list  go to state 114
    param       go to state 115


State 97

   37 func_call: CALL ID LPAREN arg_list • RPAREN

    RPAREN  shift, and go to state 116


State 98

   38 arg_list: args •
   40 args: args • COMMA expr

    COMMA  shift, and go to state 117
